tests/spec/build/snapshots/cross_module_ufcs_uses_import_alias.snap
---
source: tests/spec/build/mod.rs
---
// === lib/box.go ===
package lib

import "fmt"

type Box[T any] struct {
	Value T
}

func (b Box[T]) String() string {
	return fmt.Sprintf("Box { value: %v }", b.Value)
}

func Box_Map[T any, U any](self Box[T], f func(T) U) Box[U] {
	return Box[U]{Value: f(self.Value)}
}


// === main.go ===
package main

import (
	"fmt"
	L "github.com/user/myproject/lib"
)

func main() {
	b := L.Box[int]{Value: 1}
	c := L.Box_Map(b, func(x int) int {
		return x + 1
	})
	fmt.Println(c.Value)
}
