tests/spec/build/snapshots/cross_package_enum_construction_uses_import_alias.snap
---
source: tests/spec/build/mod.rs
---
// === lib/colors.go ===
package lib

func MakeColorRed() Color {
	return Color{Tag: ColorRed}
}

func MakeColorBlue() Color {
	return Color{Tag: ColorBlue}
}

type ColorTag uint8

const (
	ColorRed ColorTag = iota
	ColorBlue
)

type Color struct {
	Tag ColorTag
}


// === main.go ===
package main

import (
	"fmt"
	L "github.com/user/myproject/lib"
)

func main() {
	c := L.MakeColorRed()
	fmt.Println(c)
}
