tests/spec/build/snapshots/cross_package_generic_constructor_type_args.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/util"
)

func main() {
	b := util.Box_New[string]()
	fmt.Println(b.Items)
}


// === util/box.go ===
package util

type Box[T any] struct {
	Items []T
}

func Box_New[T any]() Box[T] {
	return Box[T]{Items: []T{}}
}
