tests/spec/build/snapshots/cross_package_generic_static_method_value_instantiated.snap
---
source: tests/spec/build/mod.rs
---
// === lib/lib.go ===
package lib

type Box[T any] struct {
	Value T
}

func Box_New[T any](x T) Box[T] {
	return Box[T]{Value: x}
}


// === main.go ===
package main

import "github.com/user/myproject/lib"

func main() {
	f := lib.Box_New[int]
	b := f(42)
	_ = b.Value
}
